# plexpiry

./: .coveragerc  .gitignore  README.md  plexpiry.py  setup.cfg  test-requirements.txt  tox.ini
plexpiry/: .plexpiry.py.swp  plexpiry.py
plexpiry/tests/: test_plexpiry.py
tests/: 433.xml  bad_config_file.conf  bad_config_file2.conf  fake_movie_one.xml  fake_movie_two.xml  fake_movies.xml  fake_section_2.xml  fake_sections.xml  fake_tv_episodes.xml  fake_tv_seasons.xml  fake_tv_shows.xml  fake_tv_tree.xml  good_config_file.conf  ignore.conf  never_expire.conf  non_expiring_config_file.conf  test_plexpiry.py
