[metadata]
name = plexpiry
author = Chris Jones
author-email = cmsj@tenshu.net
summary = Easily expire old content from Plex
description-file = 
      README.md
home-page = http://github.com/cmsj/plexpiry
classifier =
      Development Status :: 4 - Beta
      Environment :: Console
      Intended Audience :: Developers
      License :: OSI Approved :: MIT
      Operating System :: OS Independent
      Programming Language :: Python

[files]
packages = plexpiry

[entry_points]
console_scripts =
      plexpiry = plexpiry.plexpiry:main

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
